# fast_car_api

./: alembic.ini  fast_car_api.db  pyproject.toml  requirements.txt
docs/: index.md
migrations/: env.py
migrations/versions/: 0f95400106ce_create_cars_table.py  c325aeb09efe_correct_table_name.py
src/fast_car_api/: database.py  main.py  models.py  routers.py  schemas.py
